tests/dataset/tpc-ds/compiler/c/q1.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _avg_float(list_float v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *c_customer_id;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int sr_returned_date_sk;
  int sr_customer_sk;
  int sr_store_sk;
  double sr_return_amt;
} store_return_t;
typedef struct {
  int len;
  store_return_t *data;
} store_return_list_t;
store_return_list_t create_store_return_list(int len) {
  store_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_sk;
  const char *s_state;
} store_t;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  const char *c_customer_id;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ctr_customer_sk;
  int ctr_store_sk;
  double ctr_total_return;
} customer_total_return_item_t;
typedef struct {
  int len;
  customer_total_return_item_t *data;
} customer_total_return_item_list_t;
customer_total_return_item_list_t
create_customer_total_return_item_list(int len) {
  customer_total_return_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_total_return_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int customer_sk;
  int store_sk;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *c_customer_id;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q1_result_result;
static void test_TPCDS_Q1_result() {
  tmp1_t tmp1[] = {(tmp1_t){.c_customer_id = "C2"}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q1_result_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q1_result_result.len; i3++) {
      if (test_TPCDS_Q1_result_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_return_t store_returns[] = {(store_return_t){.sr_returned_date_sk = 1,
                                                     .sr_customer_sk = 1,
                                                     .sr_store_sk = 10,
                                                     .sr_return_amt = 20.0},
                                    (store_return_t){.sr_returned_date_sk = 1,
                                                     .sr_customer_sk = 2,
                                                     .sr_store_sk = 10,
                                                     .sr_return_amt = 50.0}};
  int store_returns_len = sizeof(store_returns) / sizeof(store_returns[0]);
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1, .d_year = 1998}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_t store[] = {(store_t){.s_store_sk = 10, .s_state = "TN"}};
  int store_len = sizeof(store) / sizeof(store[0]);
  customer_t customer[] = {
      (customer_t){.c_customer_sk = 1, .c_customer_id = "C1"},
      (customer_t){.c_customer_sk = 2, .c_customer_id = "C2"}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  customer_total_return_item_t customer_total_return[10];
  int customer_total_return_len = 0;
  for (int i4 = 0; i4 < store_returns_len; i4++) {
    store_return_t sr = store_returns[i4];
    for (int i5 = 0; i5 < date_dim_len; i5++) {
      date_dim_t d = date_dim[i5];
      if (!(sr.sr_returned_date_sk == d.d_date_sk && d.d_year == 1998)) {
        continue;
      }
      int tmp6 = -1;
      for (int i7 = 0; i7 < customer_total_return_len; i7++) {
        if (strcmp(customer_total_return[i7].name,
                   (tmp_item_t){.customer_sk = sr.sr_customer_sk,
                                .store_sk = sr.sr_store_sk}) == 0) {
          tmp6 = i7;
          break;
        }
      }
      if (tmp6 == -1) {
        customer_total_return[customer_total_return_len].name = (tmp_item_t){
            .customer_sk = sr.sr_customer_sk, .store_sk = sr.sr_store_sk};
        customer_total_return[customer_total_return_len].count = 1;
        tmp6 = customer_total_return_len;
        customer_total_return_len++;
      } else {
        customer_total_return[tmp6].count++;
      }
    }
  }
  list_float tmp8 = list_float_create(customer_total_return_len);
  int tmp9 = 0;
  for (int tmp10 = 0; tmp10 < customer_total_return_len; tmp10++) {
    customer_total_return_item_t ctr2 = customer_total_return[tmp10];
    if (!(ctr1.ctr_store_sk == ctr2.ctr_store_sk)) {
      continue;
    }
    tmp8.data[tmp9] = ctr2.ctr_total_return;
    tmp9++;
  }
  tmp8.len = tmp9;
  result_item_list_t tmp11 = result_item_list_t_create(
      customer_total_return.len * store.len * customer.len);
  int tmp12 = 0;
  for (int tmp13 = 0; tmp13 < customer_total_return_len; tmp13++) {
    customer_total_return_item_t ctr1 = customer_total_return[tmp13];
    for (int tmp14 = 0; tmp14 < store_len; tmp14++) {
      store_t s = store[tmp14];
      if (!(ctr1.ctr_store_sk == s.s_store_sk)) {
        continue;
      }
      for (int tmp15 = 0; tmp15 < customer_len; tmp15++) {
        customer_t c = customer[tmp15];
        if (!(ctr1.ctr_customer_sk == c.c_customer_sk)) {
          continue;
        }
        if (!(ctr1.ctr_total_return > _avg_float(tmp8) * 1.2 &&
              s.s_state == "TN")) {
          continue;
        }
        tmp11.data[tmp12] = (result_item_t){.c_customer_id = c.c_customer_id};
        tmp12++;
      }
    }
  }
  tmp11.len = tmp12;
  result_item_list_t result = tmp11;
  printf("[");
  for (int i16 = 0; i16 < result.len; i16++) {
    if (i16 > 0)
      printf(",");
    result_item_t it = result.data[i16];
    printf("{");
    _json_string("c_customer_id");
    printf(":");
    _json_string(it.c_customer_id);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q1_result_result = result;
  test_TPCDS_Q1_result();
  free(tmp8.data);
  return 0;
}
